--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <section id="sobre">
             <div class="container">
-                <h2>Sobre Nos</h2>
+                <h2>Sobre Nós</h2>
                 <p>Prezados,
 É com grande satisfação que me apresento como representante da Cascavel Designer, uma empresa especializada em design gráfico e gestão de mídias sociais. Como especialista nesse campo, temos o compromisso de oferecer soluções criativas e estratégicas para atender às necessidades dos nossos clientes.Com uma equipe experiente e dedicada, estamos empenhados em proporcionar resultados excepcionais, alinhados com os objetivos e valores de cada projeto que assumimos. Acreditamos na importância do design e da presença online eficaz para o sucesso de qualquer negócio nos dias de hoje.Estamos à disposição para colaborar com você e sua empresa, oferecendo serviços de alta qualidade e um atendimento personalizado. Não hesite em nos contatar para discutir como podemos ajudar a alcançar seus objetivos de design gráfico e presença nas redes sociais.</p>
                 
